--- a/KTaseva.App/Properties/launchSettings.json
+++ b/KTaseva.App/Properties/launchSettings.json
@@ -15,7 +15,7 @@
         "ASPNETCORE_ENVIRONMENT": "Development"
       }
     },
-    "KTaseva": {
+    "KTaseva.App": {
       "commandName": "Project",
       "launchBrowser": true,
       "applicationUrl": "https://localhost:5001;http://localhost:5000",
