Add IAdminService, View Model AdminInputAddPhoto

--- a/KTaseva.App/KTaseva.App.csproj
+++ b/KTaseva.App/KTaseva.App.csproj
@@ -18,6 +18,8 @@
 
   <ItemGroup>
     <ProjectReference Include="..\KTaseva.Data\KTaseva.Data.csproj" />
+    <ProjectReference Include="..\KTaseva.Services\KTaseva.Services.csproj" />
+    <ProjectReference Include="..\KTaseva.ViewModels\KTaseva.ViewModels.csproj" />
   </ItemGroup>
 
 </Project>
