--- a/KTaseva.App/appsettings.json
+++ b/KTaseva.App/appsettings.json
@@ -9,5 +9,10 @@
       "Microsoft.Hosting.Lifetime": "Information"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "Cloudinary": {
+    "AppName": "ktaseva",
+    "AppKey": "873569669957412",
+    "AppSecret": "yHX2-x8AgaqrTr6y5fdhM116sAw"
+  }
 }
