--- a/KTaseva.Services/KTaseva.Services.csproj
+++ b/KTaseva.Services/KTaseva.Services.csproj
@@ -8,4 +8,8 @@
     <ProjectReference Include="..\KTaseva.ViewModels\KTaseva.ViewModels.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="Cloudinary\" />
+  </ItemGroup>
+
 </Project>
