--- a/KTaseva.Data/KTaseva.Data.csproj
+++ b/KTaseva.Data/KTaseva.Data.csproj
@@ -5,6 +5,11 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <Compile Remove="Migrations\20200403090828_AddProceduresEnums.cs" />
+    <Compile Remove="Migrations\20200403090828_AddProceduresEnums.Designer.cs" />
+  </ItemGroup>
+
+  <ItemGroup>
     <PackageReference Include="Microsoft.AspNetCore.Identity.EntityFrameworkCore" Version="3.1.0" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.Design" Version="3.1.0">
       <PrivateAssets>all</PrivateAssets>
