--- a/KTaseva.ViewModels/KTaseva.ViewModels.csproj
+++ b/KTaseva.ViewModels/KTaseva.ViewModels.csproj
@@ -8,4 +8,9 @@
     <PackageReference Include="Microsoft.AspNetCore.Http.Features" Version="3.1.3" />
   </ItemGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\KTaseva.Models\KTaseva.Models.csproj" />
+    <ProjectReference Include="..\KTaseva.Services.Mapping\KTaseva.Services.Mapping.csproj" />
+  </ItemGroup>
+
 </Project>
