Add test AddReturnCorrectly

--- a/KTaseva.Tests/KTaseva.Tests.csproj
+++ b/KTaseva.Tests/KTaseva.Tests.csproj
@@ -17,6 +17,7 @@
 
   <ItemGroup>
     <ProjectReference Include="..\KTaseva.Data\KTaseva.Data.csproj" />
+    <ProjectReference Include="..\KTaseva.Services\KTaseva.Services.csproj" />
     <ProjectReference Include="..\KTaseva.ViewModels\KTaseva.ViewModels.csproj" />
   </ItemGroup>
 
