--- a/KTaseva.App/appsettings.json
+++ b/KTaseva.App/appsettings.json
@@ -14,5 +14,8 @@
     "AppName": "ktaseva",
     "AppKey": "873569669957412",
     "AppSecret": "yHX2-x8AgaqrTr6y5fdhM116sAw"
+  },
+  "EmailSettings": {
+    "SendGridApiKey": "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"
   }
 }
