--- a/KTaseva.App/appsettings.json
+++ b/KTaseva.App/appsettings.json
@@ -16,6 +16,10 @@
     "AppSecret": "yHX2-x8AgaqrTr6y5fdhM116sAw"
   },
   "EmailSettings": {
-    "SendGridApiKey": "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"
+    "SendGridApiKey": "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"
+  },
+  "GooglereCAPTCHA": {
+    "ReCAPTCHA_Site_Key": "6LceouwUAAAAAIA3OLHE8MNWffmjY3saUzWEiRwV",
+    "ReCAPTCHA_Secret_Key": "6LceouwUAAAAAAi14XjsQmmqpWv0-L7AU4gcfrX1"
   }
 }
