--- a/KTaseva.App/appsettings.json
+++ b/KTaseva.App/appsettings.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection": "Server=DESKTOP-PE61018\\SQLEXPRESS;Database=KTaseva;Integrated Security=True;"
+    "DefaultConnection": "Data Source=tcp:ktaseva.database.windows.net,1433;Initial Catalog=KTasevaDb;User Id=ktaseva@ktaseva.database.windows.net;Password=Drakola9@;"
   },
   "Logging": {
     "LogLevel": {
